[gd_scene load_steps=10 format=3 uid="uid://b52yugfrhuywh"]

[ext_resource type="Script" path="res://Scenes/Menus/OptionsMenu/options_menu.gd" id="1_55mik"]
[ext_resource type="FontFile" uid="uid://0pcsmgvhx3hf" path="res://Kavoon-Regular.ttf" id="1_xypns"]
[ext_resource type="StyleBox" uid="uid://dhgnclwd1fv1p" path="res://buttonstyle.tres" id="2_0m3vy"]
[ext_resource type="Script" path="res://Scripts/music_slider.gd" id="3_h5cyc"]
[ext_resource type="Script" path="res://Scripts/sfx_slider.gd" id="4_53fsi"]
[ext_resource type="Script" path="res://Scenes/Menus/OptionsMenu/audio.gd" id="4_woftf"]
[ext_resource type="Script" path="res://Scenes/controls.gd" id="5_l6fbn"]
[ext_resource type="PackedScene" uid="uid://bv3t0wpvtft44" path="res://Scenes/Menus/OptionsMenu/input_button.tscn" id="7_ubh7r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sf83b"]
bg_color = Color(0.556863, 0.886275, 0.529412, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55mik")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sf83b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 42.0
offset_right = 121.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_xypns")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 213.0
offset_right = 694.0
offset_bottom = 595.0
current_tab = 0

[node name="Audio" type="TabBar" parent="TabContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/tab_selected = ExtResource("2_0m3vy")
script = ExtResource("4_woftf")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 2
offset_left = 166.0
offset_top = 75.0
offset_right = 383.0
offset_bottom = 91.0
max_value = 1.0
step = 0.01
script = ExtResource("3_h5cyc")

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 2
offset_left = 167.0
offset_top = 133.0
offset_right = 385.0
offset_bottom = 149.0
max_value = 1.0
step = 0.05
script = ExtResource("4_53fsi")

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 2
offset_left = 166.0
offset_top = 197.0
offset_right = 382.0
offset_bottom = 213.0
max_value = 1.0
step = 0.05
script = ExtResource("4_53fsi")

[node name="Label" type="Label" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 40.0
offset_top = 70.0
offset_right = 156.0
offset_bottom = 93.0
text = "Master volume"

[node name="Label2" type="Label" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 46.0
offset_top = 129.0
offset_right = 162.0
offset_bottom = 152.0
text = "Music volume"

[node name="Label3" type="Label" parent="TabContainer/Audio"]
layout_mode = 0
offset_left = 43.0
offset_top = 192.0
offset_right = 159.0
offset_bottom = 215.0
text = "Effects volume"

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_l6fbn")
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/Controls"]
layout_mode = 0
offset_left = 236.0
offset_top = 9.0
offset_right = 337.0
offset_bottom = 32.0
text = "Input control"

[node name="Inputs" type="VBoxContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -114.5
offset_right = 519.0
offset_bottom = 132.5
grow_vertical = 2
theme_override_constants/separation = 5

[node name="InputButton" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton2" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton3" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton4" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton5" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton6" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton7" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="InputButton8" parent="TabContainer/Controls/Inputs" instance=ExtResource("7_ubh7r")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 111.0
offset_top = -31.0
offset_right = -121.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "reset to default"

[node name="SaveReturn" type="Button" parent="."]
layout_mode = 0
offset_left = 829.0
offset_top = 347.0
offset_right = 1057.0
offset_bottom = 443.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_xypns")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("2_0m3vy")
text = "Save & Return to Main Menu"
autowrap_mode = 3

[node name="ReturnNoSave" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 503.0
offset_right = 1060.0
offset_bottom = 587.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_xypns")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("2_0m3vy")
text = "Return without saving"
autowrap_mode = 3

[connection signal="value_changed" from="TabContainer/Audio/MasterSlider" to="TabContainer/Audio" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MusicSlider" to="TabContainer/Audio" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/SFXSlider" to="TabContainer/Audio" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="TabContainer/Controls/ResetButton" to="TabContainer/Controls" method="_on_reset_button_pressed"]
[connection signal="pressed" from="SaveReturn" to="TabContainer/Audio" method="_on_save_return_pressed"]
[connection signal="pressed" from="SaveReturn" to="TabContainer/Controls" method="_on_save_return_pressed"]
[connection signal="pressed" from="ReturnNoSave" to="TabContainer/Audio" method="_on_return_no_save_pressed"]
[connection signal="pressed" from="ReturnNoSave" to="TabContainer/Controls" method="_on_return_no_save_pressed"]
